--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,5 +1,3 @@
-
-
 @mixin size($ancho , $alto) {
     width: $ancho;
     height: $alto;
@@ -8,4 +6,21 @@
 @mixin color-tamaño($color , $tamaño) { 
     color: $color;
     font-size: $tamaño;
+}
+
+@mixin bordes($bloque , $relleno , $padding) {
+    display: $bloque;
+    font-weight: $relleno;
+    padding: $padding;
+}
+
+@mixin secciones-tienda($top , $bottom) {
+    margin-top: $top;
+    margin-bottom: $bottom;
+
+}
+
+@mixin centrado($flex , $posittion) {
+    display: $flex;
+    align-items: $posittion;
 }
