--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -1,12 +1,18 @@
 @import "_variables.scss";
+@import "_mixin.scss";
+@import "_extends.scss";
 
-.tienda {
-    margin: 30px;
-  .borde-tienda {
-    display: inline;
-    border-top: solid 0.2rem $black;
-    border-bottom: solid 0.2rem $black;
-    font-weight: bold;
-    padding: 1rem;
+.borde-contenedor {
+  margin: 30px;
+  .borde {
+    @include bordes(inline , bold , 1rem);
+    @extend %borde;
+  }
+}
+
+.borde-secciones {
+  @include secciones-tienda(20px , 20px);
+  &:hover {
+    @extend %secciones;
   }
 }
