--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,8 @@
 @import "_tienda.scss";
 @import "_variables.scss";
 @import "mixin.scss";
+@import "_extends.scss";
+@import "_marcas.scss";
 
 .body {
   background-color: $color-fondo;
