--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,3 +8,5 @@ $gradiante-fondo: linear-gradient(
 $blanco: #f7f7f8;
 $black: black;
 $blue: rgb(60, 60, 190);
+$gris: rgb(66, 66, 66);
+$blanco: rgb(212, 206, 206);
