--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "mixin.scss";
 @import "_extends.scss";
 @import "_marcas.scss";
+@import "_nosotros.scss";
 
 .body {
   background-color: $color-fondo;
