--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ header nav .nav-link:hover {
 }
 
 footer i {
-  color: #f7f7f8;
+  color: rgb(212, 206, 206);
   font-size: 2.5rem;
   margin: 0 20px 0 20px;
 }
@@ -65,6 +65,28 @@ footer i:hover {
 .marcas-centrado {
   display: flex;
   align-items: center;
+}
+
+.formulario-contenedor {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.formulario-contenedor .texto-contacto {
+  margin-top: 100px;
+  margin-bottom: 50px;
+  grid-column: 1/3;
+}
+.formulario-contenedor .formulario-contacto {
+  grid-column: 3/5;
+  border: solid 0.05rem rgb(66, 66, 66);
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+.formulario-contenedor .formulario-contacto label {
+  color: rgb(212, 206, 206);
 }
 
 .body {
