--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,8 +6,11 @@
 @import "_extends.scss";
 @import "_marcas.scss";
 @import "_nosotros.scss";
+@import "_contacto.scss";
+
 
 .body {
   background-color: $color-fondo;
   background-image: $gradiante-fondo;
+  
 }
