--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,62 @@ header nav img {
   height: 75px;
   border-radius: 50%;
 }
-header nav .nav-link {
-  color: black;
-  font-size: 1.3rem;
-  margin-left: 1rem;
-  font-weight: bolder;
+header nav .navbar-nav {
+  transform: translate(0%, 0%);
 }
-header nav .nav-link:hover {
-  color: rgb(60, 60, 190);
-  font-size: 1.3rem;
-  border-top: solid 3px black;
+header nav .navbar-nav .nav-item {
+  list-style: none;
+}
+header nav .navbar-nav .nav-item .nav-link {
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  margin: 20px 0;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: #262626;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  transition: 0.5s;
+  z-index: 1;
+}
+header nav .navbar-nav .nav-item .nav-link:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 2px solid #262626;
+  border-bottom: 2px solid #262626;
+  transform: scaleY(2);
+  opacity: 0;
+  transition: 0.3s;
+}
+header nav .navbar-nav .nav-item .nav-link:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #262626;
+  transform: scale(0);
+  opacity: 0;
+  transition: 0.3s;
+  z-index: -1;
+}
+header nav .navbar-nav .nav-item .nav-link:hover {
+  color: #fff;
+}
+header nav .navbar-nav .nav-item .nav-link:hover:before {
+  transform: scaleY(1);
+  opacity: 1;
+}
+header nav .navbar-nav .nav-item .nav-link:hover:after {
+  transform: scaleY(1);
+  opacity: 1;
 }
 
 footer i {
@@ -67,23 +113,65 @@ footer i:hover {
   align-items: center;
 }
 
+.borde-contenedor .borde {
+  border-top: solid 0.2rem black;
+  border-bottom: solid 0.2rem black;
+}
+
+.borde-secciones:hover {
+  display: inline;
+  border-top: solid 0.3rem rgb(60, 60, 190);
+}
+
+@keyframes texto_nosotros {
+  0%, 10% {
+    opacity: 0;
+  }
+  10%, 100% {
+    color: rgb(212, 206, 206);
+    text-shadow: 0 0 12px lime, 0 0 50px lime, 0 0 100px lime;
+  }
+  10%, 90% {
+    color: #111;
+    text-shadow: none;
+  }
+}
+@keyframes subtexto {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.nosotros-contenedor h2 {
+  animation-name: texto_nosotros;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+  animation-duration: 2s;
+}
+.nosotros-contenedor .nosotros-texto {
+  animation-name: subtexto;
+  animation-iteration-count: initial;
+  animation-timing-function: ease-in;
+  animation-duration: 2s;
+}
+
 .formulario-contenedor {
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-rows: 100px 100px 200px 200px 100px 100px;
   grid-template-columns: 1fr 1fr 1fr;
 }
 .formulario-contenedor .texto-contacto {
-  margin-top: 100px;
-  margin-bottom: 50px;
   grid-column: 1/3;
+  grid-row: 3/5;
 }
 .formulario-contenedor .formulario-contacto {
+  grid-row: 2/7;
   grid-column: 3/5;
   border: solid 0.05rem rgb(66, 66, 66);
   padding: 20px;
   border-radius: 10px;
-  margin-top: 100px;
-  margin-bottom: 50px;
 }
 .formulario-contenedor .formulario-contacto label {
   color: rgb(212, 206, 206);
