--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,18 +6,67 @@ header {
   background-image: $gradiante-fondo;
   nav {
     img {
-        @include size(75px, 75px);
-        border-radius: 50%;
+      @include size(75px, 75px);
+      border-radius: 50%;
     }
-    .nav-link {
-        @include color-tamaño($black, 1.3rem);
-        margin-left: 1rem;
-        font-weight: bolder;
+    .navbar-nav {
+      transform: translate(0%, 0%);
 
-        &:hover {
-            @include color-tamaño($blue, 1.3rem);
-            border-top: solid 3px $black;
+      .nav-item {
+        list-style: none;
+
+        .nav-link {
+          position: relative;
+          display: block;
+          text-transform: uppercase;
+          margin: 20px 0;
+          padding: 10px 20px;
+          text-decoration: none;
+          color: #262626;
+          font-family: sans-serif;
+          font-size: 18px;
+          font-weight: 600;
+          transition: 0.5s;
+          z-index: 1;
+          &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-top: 2px solid #262626;
+            border-bottom: 2px solid #262626;
+            transform: scaleY(2);
+            opacity: 0;
+            transition: 0.3s;
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            top: 2px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #262626;
+            transform: scale(0);
+            opacity: 0;
+            transition: 0.3s;
+            z-index: -1;
+          }
+          &:hover {
+            color: #fff;
+            &:before {
+              transform: scaleY(1);
+              opacity: 1;
+            }
+            &:after {
+              transform: scaleY(1);
+              opacity: 1;
+            }
+          }
         }
+      }
     }
   }
 }
