--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,27 +1,45 @@
 @import "_variables.scss";
 @import "_mixin.scss";
+@import "_extends.scss";
 
-.formulario-contenedor {
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+@keyframes texto_nosotros {
+  0%, 10% {
+    opacity: 0;
+  }
+  10%, 100% {
+    color: $blanco;
+    text-shadow: 0 0 12px lime, 0 0 50px lime, 0 0 100px lime;
+  }
+  10%, 90% {
+    color: #111;
+    text-shadow: none;
+  }
+}
 
-  .texto-contacto {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    grid-column: 1 / 3;
+@keyframes subtexto {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.nosotros-contenedor {
+  
+  h2 {
+
+    animation-name: texto_nosotros; 
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
   }
 
-  .formulario-contacto {
-    grid-column: 3 / 5;
-    border: solid 0.05rem $gris;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+  .nosotros-texto {
 
-    label {
-      color: $blanco;
-    }
+    animation-name: subtexto;
+    animation-iteration-count: initial;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
   }
 }
