--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,9 @@
 
 footer {
     i {
+        @media (max-width: 480px) {
+            font-size: 1.5rem;
+        }
         @include color-tamaño($blanco, 2.5rem);
         margin: 0 20px 0 20px;    
 
@@ -10,4 +13,5 @@ footer {
             @include color-tamaño($blue, 2.8rem);
         }
     }
+
 }
