--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,18 +1,18 @@
 @import "_variables.scss";
 
-.formulario-contenedor {
-    display: grid;
-    grid-template-rows: 100px 100px 200px 200px 100px 100px;
-    grid-template-columns: 1fr 1fr 1fr;
-
-  .texto-contacto {
-    grid-column: 1 / 3;
-    grid-row: 3 / 5;
+@media (max-width: 991px) {
+  .formulario-contacto {
   }
+}
+
+.formulario-contenedor {
+  display: grid;
+  grid-template-rows: 100px 100px 200px 200px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 
   .formulario-contacto {
     grid-row: 2 / 7;
-    grid-column: 3 / 5;
+    grid-column: 2 / 6;
     border: solid 0.05rem $gris;
     padding: 20px;
     border-radius: 10px;
