Finalizacion para el tercer pre-entregable

--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,5 +1,7 @@
 @import "_variables.scss";
 
+/* Aqui podemos encontrar grid para intentar acomodar el formulario,
+no quedo como yo esperaba, espero poder acomodarlo para la proxima entrega. Mil disculpas*/
 .formulario-contenedor {
   display: grid;
   grid-template-rows: 100px 100px 200px 200px 100px 100px;
