--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,18 @@
+@charset "UTF-8";
+/* Mixin para cambios de tamaños */
+/* En este podremos cambiar color y tamaño de elementos*/
+/* Mixin para que los bordes sean tanto para elementos en bloque como en linea*/
+/* Este mixin sirve para centrar */
+/* Aqui tambien lo use para centrar */
+/* En los estilos del header podemos encontrar, color de fondo igual al del index */
 header {
   background-color: #11115a;
   background-image: linear-gradient(90deg, #11115a 0%, #6af2ff 55%, #11115a 100%);
+}
+header nav {
+  /* Cambio de tamaño del logo, y un border*radius para que que sea circular */
+  /* Aqui encontramos una animacion para cada enlace, usando positio, y bloqueando el flex se pudo lograr el efecto.
+  El before y el after los aprendi de un video de youtube */
 }
 header nav img {
   width: 75px;
@@ -65,6 +77,13 @@ header nav .navbar-nav .nav-item .nav-link:hover:after {
   opacity: 1;
 }
 
+/* Mixin para cambios de tamaños */
+/* En este podremos cambiar color y tamaño de elementos*/
+/* Mixin para que los bordes sean tanto para elementos en bloque como en linea*/
+/* Este mixin sirve para centrar */
+/* Aqui tambien lo use para centrar */
+/* Los estilos del footer solo son cambio de tamaño, un hover para los iconos de las redes sociales,
+y un responsive  */
 footer i {
   color: rgb(212, 206, 206);
   font-size: 2.5rem;
@@ -80,16 +99,24 @@ footer i:hover {
   font-size: 2.8rem;
 }
 
+/* Mixin para cambios de tamaños */
+/* En este podremos cambiar color y tamaño de elementos*/
+/* Mixin para que los bordes sean tanto para elementos en bloque como en linea*/
+/* Este mixin sirve para centrar */
+/* Aqui tambien lo use para centrar */
+/* Use este extend por que no podia usar un mixin, me parecio mejor esta opcion para la utilidad que le quise dar en el html de tienda */
 .borde-contenedor .borde {
   border-top: solid 0.2rem black;
   border-bottom: solid 0.2rem black;
 }
 
+/* Al igual que el anterior, me fue mas practico usar extend aqui, en los encabezados de la tienda*/
 .borde-secciones:hover {
   display: inline;
   border-top: solid 0.3rem rgb(60, 60, 190);
 }
 
+/* Este es el borde del h1 del html "tienda", es solo para que resalte de los demas */
 .borde-contenedor {
   margin: 30px;
 }
@@ -99,20 +126,33 @@ footer i:hover {
   padding: 1rem;
 }
 
+/* Estos estilos son para los textos de cada seccion, con un hover, la idea era darle animacion tambien, pero no logre el efecto de movimiento */
 .borde-secciones {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+/* Mixin para cambios de tamaños */
+/* En este podremos cambiar color y tamaño de elementos*/
+/* Mixin para que los bordes sean tanto para elementos en bloque como en linea*/
+/* Este mixin sirve para centrar */
+/* Aqui tambien lo use para centrar */
+/* Use este extend por que no podia usar un mixin, me parecio mejor esta opcion para la utilidad que le quise dar en el html de tienda */
 .borde-contenedor .borde {
   border-top: solid 0.2rem black;
   border-bottom: solid 0.2rem black;
 }
 
+/* Al igual que el anterior, me fue mas practico usar extend aqui, en los encabezados de la tienda*/
 .borde-secciones:hover {
   display: inline;
   border-top: solid 0.3rem rgb(60, 60, 190);
 }
 
+/* Mixin para cambios de tamaños */
+/* En este podremos cambiar color y tamaño de elementos*/
+/* Mixin para que los bordes sean tanto para elementos en bloque como en linea*/
+/* Este mixin sirve para centrar */
+/* Aqui tambien lo use para centrar */
 /* Aca esta el responsive para el h1 del html marcas.*/
 @media (max-width: 381px) {
   .borde {
@@ -191,11 +231,18 @@ footer i:hover {
   align-items: center;
 }
 
+/* Mixin para cambios de tamaños */
+/* En este podremos cambiar color y tamaño de elementos*/
+/* Mixin para que los bordes sean tanto para elementos en bloque como en linea*/
+/* Este mixin sirve para centrar */
+/* Aqui tambien lo use para centrar */
+/* Use este extend por que no podia usar un mixin, me parecio mejor esta opcion para la utilidad que le quise dar en el html de tienda */
 .borde-contenedor .borde {
   border-top: solid 0.2rem black;
   border-bottom: solid 0.2rem black;
 }
 
+/* Al igual que el anterior, me fue mas practico usar extend aqui, en los encabezados de la tienda*/
 .borde-secciones:hover {
   display: inline;
   border-top: solid 0.3rem rgb(60, 60, 190);
@@ -242,20 +289,99 @@ footer i:hover {
   animation-duration: 2s;
 }
 
-.formulario-contenedor {
+/* Responsive para pantallas grandes*/
+@media (min-width: 700px) {
+  .contacto {
+    padding: 0 4rem;
+  }
+  .contacto .formulario-card {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  .contacto .formulario-card > * {
+    padding: 2em;
+  }
+  .contacto .formulario-card .contacto-text h4, .contacto .formulario-card p {
+    padding: 1em;
+    text-align: left;
+  }
+}
+/* Formulario de contacto, echo con grid,  */
+.body-contacto {
+  box-sizing: border-box;
+  background: #181818;
+  color: #fff;
+  font-family: "Quicksand", sans-serif;
+}
+.body-contacto .contacto {
+  padding: 0 1.5em;
+}
+.body-contacto .contacto .content {
+  padding: 1.5em;
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.body-contacto .contacto .content .contacto-titulo {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  text-align: center;
+  font-size: 3em;
+}
+.body-contacto .contacto .content .contacto-titulo span {
+  color: #b70e21;
+}
+.body-contacto .contacto .content .formulario-card {
+  margin-bottom: 4em;
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+}
+.body-contacto .contacto .content .formulario-card > * {
+  padding: 1em;
+}
+.body-contacto .contacto .content .formulario-card .formulario-contacto {
+  background: #222222;
+}
+.body-contacto .contacto .content .formulario-card .formulario-contacto form {
   display: grid;
-  grid-template-rows: 100px 100px 200px 200px 100px 100px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
-.formulario-contenedor .formulario-contacto {
-  grid-row: 2/7;
-  grid-column: 2/6;
-  border: solid 0.05rem rgb(66, 66, 66);
-  padding: 20px;
-  border-radius: 10px;
+.body-contacto .contacto .content .formulario-card .formulario-contacto form p {
+  margin: 0;
+  padding: 1em;
 }
-.formulario-contenedor .formulario-contacto label {
-  color: rgb(212, 206, 206);
+.body-contacto .contacto .content .formulario-card .formulario-contacto form .block {
+  grid-column: 1/3;
+}
+.body-contacto .contacto .content .formulario-card .formulario-contacto form input,
+.body-contacto .contacto .content .formulario-card .formulario-contacto form textarea,
+.body-contacto .contacto .content .formulario-card .formulario-contacto form button {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  outline: none;
+  color: #fff;
+  border-bottom: 1px solid #d63031;
+}
+.body-contacto .contacto .content .formulario-card .formulario-contacto form button {
+  background: #b70e21;
+  border: 0;
+  text-transform: uppercase;
+  padding: 1em;
+  color: #000;
+}
+.body-contacto .contacto .content .formulario-card .formulario-contacto form button:hover, .body-contacto .contacto .content .formulario-card .formulario-contacto form button :focus {
+  background: #d63031;
+  color: #fff;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+.body-contacto .contacto .content .formulario-card .contacto-texto {
+  background: #000;
+}
+.body-contacto .contacto .content .formulario-card .contacto-texto h4, .body-contacto .contacto .content .formulario-card .contacto-texto p {
+  text-align: center;
+  margin: 0 0 1rem 0;
 }
 
 /* Aca estan los estilos al index */
