--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,21 +1,116 @@
 @import "_variables.scss";
 
-/* Aqui podemos encontrar grid para intentar acomodar el formulario,
-no quedo como yo esperaba, espero poder acomodarlo para la proxima entrega. Mil disculpas*/
-.formulario-contenedor {
-  display: grid;
-  grid-template-rows: 100px 100px 200px 200px 100px 100px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+/* Responsive para pantallas grandes*/
 
-  .formulario-contacto {
-    grid-row: 2 / 7;
-    grid-column: 2 / 6;
-    border: solid 0.05rem $gris;
-    padding: 20px;
-    border-radius: 10px;
+@media (min-width: 700px) {
+  .contacto {
+    padding: 0 4rem;
 
-    label {
-      color: $blanco;
+    .formulario-card {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+
+      & > *{
+        padding: 2em;
+      }
+
+      .contacto-text h4, p {
+          padding: 1em;
+          text-align: left;
+      }
+    }
+  }
+}
+
+/* Formulario de contacto, echo con grid,  */
+
+.body-contacto {
+  box-sizing: border-box;
+  background: #181818;
+  color: #fff;
+  font-family: "Quicksand", sans-serif;
+
+  .contacto {
+    padding: 0 1.5em;
+    .content {
+      padding: 1.5em;
+      max-width: 1170px;
+      margin-left: auto;
+      margin-right: auto;
+
+      .contacto-titulo {
+        margin-top: 2em ;
+        margin-bottom: 2em;
+        text-align: center;
+        font-size: 3em;
+
+        span {
+          color: #b70e21;
+        }
+      }
+
+      .formulario-card {
+        margin-bottom: 4em;
+        box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+
+        & > * {
+          padding: 1em;
+        }
+
+        .formulario-contacto {
+          background: #222222;
+
+          form {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+
+            p {
+              margin: 0;
+              padding: 1em;
+            }
+
+            .block {
+              grid-column: 1 / 3;
+            }
+
+            input,
+            textarea,
+            button {
+              width: 100%;
+              padding: 0.7em;
+              border: none;
+              background: none;
+              outline: none;
+              color: #fff;
+              border-bottom: 1px solid #d63031;
+            }
+
+            button {
+              background: #b70e21;
+              border: 0;
+              text-transform: uppercase;
+              padding: 1em;
+              color: #000;
+
+              &:hover, :focus {
+                background: #d63031;
+                color: #fff;
+                transition: background-color 1s ease-out;
+                outline: 0;
+              }
+            }
+          }
+        }
+
+        .contacto-texto {
+          background: #000;
+
+          h4, p {
+            text-align: center;
+            margin: 0 0 1rem 0;
+          }
+        }
+      }
     }
   }
 }
