--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -10,13 +10,14 @@
       display: grid;
       grid-template-columns: 2fr 1fr;
 
-      & > *{
+      & > * {
         padding: 2em;
       }
 
-      .contacto-text h4, p {
-          padding: 1em;
-          text-align: left;
+      .contacto-text h4,
+      p {
+        padding: 1em;
+        text-align: left;
       }
     }
   }
@@ -25,8 +26,9 @@
 /* Formulario de contacto, echo con grid,  */
 
 .body-contacto {
+  background-color: $color-fondo;
+  background-image: $gradiante-fondo;
   box-sizing: border-box;
-  background: #181818;
   color: #fff;
   font-family: "Quicksand", sans-serif;
 
@@ -39,7 +41,9 @@
       margin-right: auto;
 
       .contacto-titulo {
-        margin-top: 2em ;
+        font-weight: bold;
+        color: #000;
+        margin-top: 2em;
         margin-bottom: 2em;
         text-align: center;
         font-size: 3em;
@@ -58,7 +62,13 @@
         }
 
         .formulario-contacto {
-          background: #222222;
+          background-color: #0e020c;
+          background-image: linear-gradient(
+            0deg,
+            #0e020c 0%,
+            #342dc1 50%,
+            #0e020c 100%
+          );
 
           form {
             display: grid;
@@ -91,8 +101,10 @@
               text-transform: uppercase;
               padding: 1em;
               color: #000;
+              font-weight: bold;
 
-              &:hover, :focus {
+              &:hover,
+              :focus {
                 background: #d63031;
                 color: #fff;
                 transition: background-color 1s ease-out;
@@ -105,7 +117,8 @@
         .contacto-texto {
           background: #000;
 
-          h4, p {
+          h4,
+          p {
             text-align: center;
             margin: 0 0 1rem 0;
           }
