--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -2,19 +2,31 @@
 @import "_mixin.scss";
 @import "_extends.scss";
 
-/* Este es el borde del h1 del html "tienda", es solo para que resalte de los demas */
-.borde-contenedor {
-  margin: 30px;
-  .borde {
-    @include bordes(inline , bold , 1rem);
-    @extend %borde;
-  }
-}
+.tienda-contenedor {
+  .tienda-titulo {
+    margin: 100px 30px 50px 30px;
+    /* Aca encontramos el borde del titulo */
+    .borde {
+      @include bordes(inline, bold, 1rem);
+      @extend %borde;
+      color: $rojo;
 
-/* Estos estilos son para los textos de cada seccion, con un hover, la idea era darle animacion tambien, pero no logre el efecto de movimiento */
-.borde-secciones {
-  @include secciones-tienda(20px , 20px);
-  &:hover {
-    @extend %secciones;
+      span {
+        color: $negro;
+      }
+    }
+  }
+  .texto-tienda {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 50px;
+  }
+
+  /* Estos estilos son para los textos de cada seccion, con un hover, la idea era darle animacion tambien, pero no logre el efecto de movimiento */
+  .borde-secciones {
+    @include secciones-tienda(20px, 20px);
+    &:hover {
+      @extend %secciones;
+    }
   }
 }
