--- a/scss/_marcas.scss
+++ b/scss/_marcas.scss
@@ -1,75 +1,82 @@
 @import "_mixin.scss";
 @import "_variables.scss";
 
-/* Aca esta el responsive para el h1 del html marcas.*/ 
+/* Aca esta el responsive para el h1 del html marcas.*/
 
 @media (max-width: 381px) {
-    .borde {
+  .borde {
     font-size: 20px;
-    }
+  }
 }
 
 @media (max-width: 307px) {
-    .borde {
-        font-size: 12px;
-    }
+  .borde {
+    font-size: 12px;
+  }
 }
 
-/* Aca esta el responsive de las cards */ 
-@media(max-width: 1199px) {
-    .uno {
-        @include size(400px , 380px);
-    }
-    .dos {
-        @include size(400px , 320px);
-    }
-    .tres {
-        @include size(400px , 350px);
-    }
-    .cuatro {
-        @include size(400px , 420px);
-    }
+/* Aca esta el responsive de las cards */
+@media (max-width: 1199px) {
+  .uno {
+    @include size(400px, 380px);
+  }
+  .dos {
+    @include size(400px, 320px);
+  }
+  .tres {
+    @include size(400px, 350px);
+  }
+  .cuatro {
+    @include size(400px, 420px);
+  }
 }
 
 @media (max-width: 991px) {
-    .uno {
-        @include size(350px , 420px);
-    }
-    .dos {
-        @include size(350px , 370px);
-    }
-    .tres {
-        @include size(350px , 410px);
-    }
-    .cuatro {
-        @include size(350px , 490px);
-    }
+  .uno {
+    @include size(350px, 420px);
+  }
+  .dos {
+    @include size(350px, 370px);
+  }
+  .tres {
+    @include size(350px, 410px);
+  }
+  .cuatro {
+    @include size(350px, 490px);
+  }
 }
 
 @media (max-width: 767px) {
-    .uno {
-        @include size(250px , 650px);
-    }
-    .dos {
-        @include size(250px , 590px);
-    }
-    .tres {
-        @include size(250px , 600px);
-    }
-    .cuatro {
-        @include size(250px , 710px);
-    }
+  .uno {
+    @include size(250px, 650px);
+  }
+  .dos {
+    @include size(250px, 590px);
+  }
+  .tres {
+    @include size(250px, 600px);
+  }
+  .cuatro {
+    @include size(250px, 710px);
+  }
 }
 
 @media (max-width: 575px) {
-    .card-contenedor {
-        display: flex;
-        justify-content: center;
-    }
+  .card-contenedor {
+    display: flex;
+    justify-content: center;
+  }
 }
 
+.b-marcas {
+  font-family: "Quicksand", sans-serif;
+  color: $negro;
 
+  span {
+    color: $rojo;
+  }
+}
 /* Aca use este mixin para centrar las imagenes dentro de las cards, por que me gustaba como quedaban centradas */
 .marcas-centrado {
-    @include centrado(flex , center);
+  @include centrado(flex, center);
 }
