--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,27 +13,33 @@
   background-color: $color-fondo;
   background-image: $gradiante-fondo;
 
-  .container {
+  .container-index {
+    h1 {
+      color: $rojo;
 
+      span {
+        color: $negro;
+      }
+    }
     .card {
-     /* Aca esta la media query para responsive de las cards y el carrousel */ 
+      /* Aca esta la media query para responsive de las cards y el carrousel */
       .card-title {
         @media (max-width: 480px) {
           font-size: 17px;
         }
-        @media (max-width: 320px){
+        @media (max-width: 320px) {
           font-size: 12px;
         }
       }
 
       .card-text {
-        @media (max-width: 480px){
+        @media (max-width: 480px) {
           font-size: 12px;
         }
-        @media (max-width: 320px){
+        @media (max-width: 320px) {
           font-size: 10px;
         }
       }
     }
-    }
   }
+}
