--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,11 +8,11 @@ footer {
         @media (max-width: 480px) {
             font-size: 1.5rem;
         }
-        @include color-tamaño($blanco, 2.5rem);
+        @include color-tamanio($blanco, 2.5rem);
         margin: 0 20px 0 20px;    
 
         &:hover {
-            @include color-tamaño($blue, 2.8rem);
+            @include color-tamanio($rojo, 2.8rem);
         }
     }
     
