--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,10 +5,22 @@ $gradiante-fondo: linear-gradient(
     #6af2ff 55%,
     #11115a 100%
   );
-$blanco: #f7f7f8;
+$offwhite: #fff;
 $black: black;
 $blue: rgb(60, 60, 190);
 $gris: rgb(66, 66, 66);
 $blanco: rgb(212, 206, 206);
 $rojo: #b70e21;
 $negro: #000;
+$form: #0e020c;
+$color-form: #0e020c;
+$gradiant-form: linear-gradient(
+  0deg,
+  #0e020c 0%,
+  #342dc1 50%,
+  #0e020c 100%
+);
+$rojiso: #d63031;
+$gris: rgba(255, 255, 255, 0.3);
+$gris-oscuro: #262626;
+$lima: lime;
