--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -9,6 +9,7 @@
     .borde {
       @include bordes(inline, bold, 1rem);
       @extend %borde;
+      font-family: "Quicksand", sans-serif;
       color: $rojo;
 
       span {
@@ -17,8 +18,7 @@
     }
   }
   .texto-tienda {
-    text-align: center;
-    font-size: 1.5rem;
+    @include alineacion-tam(center , 1.5rem);
     margin-bottom: 50px;
   }
 
